2016-09-21  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix iconv() return value checking.

	* tools/trietool.c (conv_to_alpha):
	  - Check iconv() return value against (size_t) -1, rather than
	    for its negativity, as size_t can be unsigned.

	Thanks Daniel Macks for the report on Issue #3.
	https://github.com/tlwg/libdatrie/issues/3

2016-09-21  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use versioning based on Git snapshot.

	* Makefile.am:
	  - Add dist-hook to generate VERSION file on tarball generation.
	* +build-aux/git-version-gen:
	  - Add script to generate version based on 'git describe'
	    if in git tree, or using VERSION file if in release tarball.
	* configure.ac:
	  - Call git-version-gen to get package version.

2015-10-20  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* configure.ac:
	  - Bump library revision to reflect code changes.

	* NEWS, configure.ac:
	=== Version 0.2.10 ===

2015-10-13  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Optimize AlphaMap mapping.

	alpha_map_char_to_trie() is called everywhere before trie state
	transition. It's an important bottleneck.

	We won't change the persistent AlphaMap structure, but will add
	pre-calculated lookup tables for use at run-time.

	* datrie/alpha-map.c (struct _AlphaMap):
	  - Add members for alpha-to-trie and trie-to-alpha lookup tables.
	* datrie/alpha-map.c (alpha_map_new, alpha_map_free):
	  - Initialize & free the tables properly.
	* datrie/alpha-map.c (alpha_map_add_range -> alpha_map_add_range_only
	  + alpha_map_recalc_work_area):
	  - Split alpha_map_add_range() API into two parts: adding the range
	    as usual and recalculate the lookup tables.
	* datrie/alpha-map.c (alpha_map_clone, alpha_map_fread_bin):
	  - Call alpha_map_add_range_only() repeatedly before calling
	    alpha_map_recalc_work_area() once.
	* datrie/alpha-map.c (alpha_map_char_to_trie, alpha_map_trie_to_char):
	  - Look up the pre-calculated tables instead of calculating on