@@ -2,7 +2,10 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = datrie tools man doc tests
 
-EXTRA_DIST = README.migration
+EXTRA_DIST =	\
+	README.migration		\
+	build-aux/git-version-gen	\
+	$(NULL)
 
 doc_DATA = README.migration
 
